<resources>
    <string name="app_name" translatable="false">Chat Me</string>
    <string name="email_hint_text">email</string>
    <string name="password_hint_text">password</string>
    <string name="sign_in_text">sign in</string>
    <string name="sign_in_progress_mess">sign in you in</string>
    <string name="register_text">register</string>
    <string name="register_progress_mess">creating your account</string>
    <string name="app_slogan">meet the world</string>
    <string name="email_error_mess">non valid email</string>
    <string name="password_error_mess">non valid password</string>
    <string name="username_error_mess">non valid username</string>
    <string name="gmail_auth_text">continue with</string>
    <string name="gmail" translatable="false">Gmail</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="choice">or</string>
    <string name="sign_out">sign out</string>
    <string name="username_hint">username</string>
    <string name="get_started">get started</string>
    <string name="default_chat_language_text">default chat language:</string>
    <string name="new_profile_image_dialog_title">new profile picture</string>

    <array name="import_image_dialog_items">
        <item>import from gallery</item>
        <item>take a photo</item>
    </array>

    <!--facebook auth-->
    <string name="facebook_app_id">459045137790111</string>
    <string name="fb_login_protocol_scheme">fb459045137790111</string>


</resources>
