<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="udacity.project.summer.chatme.AuthFragment">




    <ImageView
        android:id="@+id/chat_me_logo"
        android:layout_width="196dp"
        android:layout_height="152dp"
        android:layout_marginTop="32dp"
        android:transitionName="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chat_bubble" />
    <TextView
        android:id="@+id/chat_me_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textSize="20sp"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_me_logo"
        android:layout_marginTop="32dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_edit_text_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/chat_me_slogan">


        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_edit_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text_layout">

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:paddingStart="4dp"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text_layout"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/password_edit_text_layout"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/linearLayout">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmail_auth_text"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/gmail_auth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmail"
            android:clickable="true"
            android:paddingStart="4dp"
            android:textColor="@android:color/holo_blue_light"/>
    </LinearLayout>

    <Button
        android:id="@+id/sign_in_button"
        style="@style/Widget.AppCompat.Button"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:elevation="2dp"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:text="@string/sign_in_text"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/email_edit_text_layout"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_button" />
    <Button
        android:id="@+id/register_button"
        style="@style/Widget.AppCompat.Button"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:elevation="2dp"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text_layout"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="@+id/password_edit_text_layout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

</android.support.constraint.ConstraintLayout>
